# soybean-yield-prediction

./: README.md  pyproject.toml  soybean_us_yield_prediction.ipynb
data/: README.txt
notebooks/: eda.ipynb
scripts/: preprocess_irrigation.py
src/viz/: heatmap.py
